      backports changes file.  (Closes: #732225).
    + [BR] Apply patch from Tomasz Bucher, add check for
      for timestamped gzip files.  (Closes: #738591).
  * checks/phppear.pm:
    + [BR] Fix a false positive for
      missing-pkg-php-tools-addon phpcomposer, thanks to
      David Prévot (Closes: #754738).
  * checks/source-copyright.{desc,pm}:
    + [BR] Pedantic warn about non dep-5 debian/copyright.

  * data/cruft/warn-file-type:
    + [BR] add debug source suffix for detecting javascript
      source-is-missing and improve test suite. Fix a
      false postive in mono.
  * data/debhelper/dh_commands:
    + [BR] Add patch from  Piotr Ożarowski, dh-python2
      moved to dh-python package (Closes: #740161).

  * doc/tutorial/Lintian/Tutorial/WritingChecks.pod:
    + [NT] Correct tutorial now that the "index" collection
      is gone.

 -- Niels Thykier <niels@thykier.net>  Sun, 13 Jul 2014 21:04:57 +0200

lintian (2.5.25) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - capitalization-error-in-description-synopsis
      - incorrect-naming-of-pkcs11-module
      - package-contains-thumbnails-dir
      - pkg-config-bad-directive
      - source-contains-prebuilt-ms-help-file
      - spelling-error-in-description-synopsis

  * checks/*.desc:
    + [NT] Replaced "index" with "unpacked" in Needs-Info.
  * checks/cruft.{desc,pm}:
    + [BR] Add a forgotten return statement, and avoid
      false positive for deployJava.js (Closes: #745152).
    + [BR] Fix another false positive in GFDL detection.
    + [BR] Use whitelist for know good RFC (Closes: #753970).
    + [BR]  Detect and warn about *.chm file
      (MS Windows HtmlHelp Data).  (Closes: #653910).
  * checks/description.{desc,pm}:
    + [NT] Apply patch from Anders Jonsson to check spelling
      of the package synopsis.  (Closes: #747266)
  * checks/files.{desc,pm}:
    + [RG,NT] Check for invalid named p11-kit modules in
      /usr/share/p11-kit modules.  (Closes: #741346)