@@ -1,0 +1,5 @@
+Testname: source-copyright-empty-field
+Sequence: 6000
+Version: 1.0
+Description: Test for empty required field
+Test-For: missing-field-in-dep5-copyright
