@@ -1,0 +1,4 @@
+W: source-copyright-empty-field source: missing-field-in-dep5-copyright copyright (empty paragraph at line 6)
+W: source-copyright-empty-field source: missing-field-in-dep5-copyright files (empty paragraph at line 24)
+W: source-copyright-empty-field source: missing-field-in-dep5-copyright license (empty line 42)
+W: source-copyright-empty-field source: missing-license-text-in-dep5-copyright (paragraph at line 58)
